# SpacedRepetition

./: .gitignore  README.md  pyproject.toml
apps/cards/: admin.py  models.py  urls.py  views.py
apps/cards/migrations/: 0001_initial.py  0002_auto_20210305_1118.py  0003_auto_20210305_1130.py  0004_auto_20210305_1131.py  0005_auto_20210305_2248.py
apps/decks/: admin.py  models.py  urls.py  views.py
apps/decks/migrations/: 0001_initial.py  0002_auto_20210305_1118.py  0003_auto_20210305_1123.py  0004_auto_20210305_2248.py
apps/users/: admin.py
apps/users/migrations/: 0001_initial.py
apps/utils/: models.py
config/: settings.py  wsgi.py
